--- a/sass/main.css
+++ b/sass/main.css
@@ -330,7 +330,6 @@ section {
   font-size: 18px;
   padding-right: 0;
   font-family: Shrikhand;
-  font-style: italic;
   font-weight: 100;
 }
 .infos_content {
@@ -386,6 +385,15 @@ section {
   .intro .explore-btn {
     white-space: nowrap;
   }
+  .fonctionnement__steps-cards {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 24px;
+  }
+  .fonctionnement__step-card {
+    padding-bottom: 0;
+  }
   .restaurants__cards {
     display: flex;
     flex-direction: row;
@@ -404,15 +412,14 @@ section {
   .card__content {
     margin: 16px 25px 16px 18px;
   }
-  .infos {
-    display: flex;
-    flex-direction: row-reverse;
-  }
   .infos--padding {
     padding: 57px 25px 30px;
+    flex-direction: row-reverse;
+    display: flex;
   }
   .infos_logo {
     padding-right: 12px;
+    padding-top: 15px;
   }
   .infos_content {
     display: flex;
@@ -498,12 +505,14 @@ section {
     flex-direction: row-reverse;
   }
   .infos_logo {
-    padding-right: 84px;
+    padding-right: 50px;
+    padding-bottom: 7px;
   }
   .infos_content {
     flex-direction: row;
     align-items: center;
     margin: 0;
+    font-size: 17px;
   }
   .infos_content--position {
     display: flex;
@@ -511,9 +520,9 @@ section {
     gap: 10px;
   }
   .infos .contact-partenaire {
-    margin-right: 80px;
+    margin-right: 30px;
   }
   .infos .contact {
-    margin-right: 90px;
+    margin-right: 80px;
   }
 }/*# sourceMappingURL=main.css.map */
