--- a/sass/resto1.scss
+++ b/sass/resto1.scss
@@ -37,10 +37,11 @@ h3{
 
     .image-bg{
         width: 100%;
-        height: 100%;
+        height:100% ;
         object-fit: cover;
         position: relative;
         z-index: 1;
+        
      }
      .position{
         width: 100%;
@@ -132,6 +133,11 @@ h3{
                         font-family: Roboto;
                         text-overflow: ellipsis;
                         overflow: hidden;
+                        white-space: nowrap;
+
+                    &__title{
+                        white-space: nowrap;
+                    }
 
                     }
                 }
@@ -315,8 +321,9 @@ h3{
         }
         
         .image-bg {
-            height: 445px;
+            height: 460px;
         }
+       
         .restaurant{
             padding: 51px 10px 40px;
             margin: 0 192px;
@@ -327,10 +334,37 @@ h3{
                 align-items: center;
                 gap: 24px;
             }
+            
+        
             .favorite{
                 padding-bottom: 80px;
+              }   
+            
+
+
+ .menu{
+            width: 66%;
+          &__card {
+                width: 634px;
+                &:hover .menu__infos,
+                &:hover .title {
+                    width: 100%;
+                }
+            }
+            &__content:hover{
+                width: 90%;
+            }
+            &__content--infos{
+                width: 100%;
             }
         }
+
+
+
+
+
+        }
+        
         .infos {
              &--padding {
                 padding: 57px  25px  30px;
@@ -338,12 +372,14 @@ h3{
                 flex-direction: row-reverse;
            }
              &_logo {
-            padding-right: 84px;
+            padding-right: 50px;
+            padding-bottom: 7px;
            }
            &_content {
             flex-direction: row;
             align-items: center;
             margin: 0;
+            font-size: 17px;
             &--position{
                 display: flex;
                 align-items: center;
@@ -351,27 +387,74 @@ h3{
             }
            }
            .contact-partenaire{
-            margin-right: 80px;
+            margin-right: 30px;
            }
            .contact{
-            margin-right: 90px;
+            margin-right: 80px;
            }
         }
         }
          @media (min-width: 767.98px) and (max-width: 1024px) {
-.restaurant{ 
+
+.position{
+    top: 496px;
+}
+.header-container{
+    width: 100%;
+    
+
+  
+
+&__logo{
+    margin-left: 250px;
+}
+
+  }
+
+
+   .restaurant{ 
+    padding: 51px 20px 40px;
+    margin: 0 100px;
+    align-items: center;
     
     &__headline{
         display: flex;
-        justify-content: center;
+        align-items: center;
+        gap: 24px;
     }
-    
+    .favorite{
+        padding-bottom: 80px;
         
-        
+    }
+    }
+    .infos{
+        &--padding{
+            padding: 57px 25px 30px;
+            display: flex;
+            flex-direction: row-reverse;
+        }
+        &_logo{
+            padding-right: 12px;
+            padding-top: 15px;
+            align-items: center;
+        }
+        &_content{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
 
-    
-    
-        
+        &--position {
+            display: flex;
+            align-items: center;
+            gap: 11px;
+        }
+        }
+        .contact-partenaire{
+            margin-right: 20px;
+        }
+        .contact{
+            margin-right: 40px;
+        }
     }
 
 }
