--- a/sass/main.css
+++ b/sass/main.css
@@ -1,15 +1,18 @@
 body {
-  margin: 0;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
 }
 
 .main-container {
   width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 h1, h2, h3 {
   margin: 0;
   padding: 0;
-  font-family: Roboto;
 }
 
 a {
@@ -144,6 +147,7 @@ section {
 .explore-btn:hover {
   background: linear-gradient(#FF79DA, #9356DC);
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.25);
+  filter: brightness(1.2);
 }
 
 .commander {
@@ -153,9 +157,13 @@ section {
   padding: 16px 48px 15px 49px;
 }
 
+.steps-container {
+  padding-left: 20px;
+  padding-right: 25px;
+}
+
 .fonctionnement {
-  margin: 0 20px;
-  padding: 48px 0;
+  width: 100%;
 }
 .fonctionnement__title {
   font-family: Roboto;
@@ -168,6 +176,7 @@ section {
   align-items: center;
   padding-bottom: 24px;
   cursor: pointer;
+  width: 100%;
 }
 .fonctionnement__step-number {
   background-color: #9356DC;
@@ -193,7 +202,7 @@ section {
   position: relative;
   left: 12px;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-  width: 244px;
+  width: 100%;
 }
 .fonctionnement__step-content:hover {
   background-color: #F6F6F6;
@@ -212,6 +221,8 @@ section {
 
 .restaurant-bg {
   background-color: #F6F6F6;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .restaurants {
@@ -221,6 +232,7 @@ section {
 }
 .restaurants__title {
   margin-bottom: 26px;
+  font-family: Roboto;
 }
 
 .card {
@@ -458,17 +470,15 @@ section {
     padding: 50px 0;
   }
   .fonctionnement__title {
-    margin-left: 270px;
     font-family: Roboto;
     font-size: 25px;
   }
   .fonctionnement__steps-cards {
     display: flex;
     gap: 32px;
-    margin-left: 270px;
   }
   .fonctionnement__step-card {
-    width: 330px;
+    width: 30%;
     height: 72px;
   }
   .fonctionnement__step-content {
@@ -478,26 +488,28 @@ section {
   .fonctionnement a {
     width: 30%;
   }
+  .fonctionnement__step-text {
+    font-size: 16px;
+    font-family: Roboto;
+  }
+  .steps-container {
+    width: 90%;
+  }
   .restaurants__cards {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 50px 100px;
-    margin-left: 260px;
-    margin-right: 200px;
   }
   .restaurants__cards a {
     width: 30%;
     flex-grow: 1;
   }
   .restaurants__cards .card {
-    width: 100%;
+    width: 80%;
   }
   .restaurants__cards .card__content {
     margin: 16px 25px 16px 18px;
-  }
-  .restaurants__title {
-    margin-left: 260px;
   }
   .infos--padding {
     padding: 57px 25px 30px;
