--- a/sass/main.css
+++ b/sass/main.css
@@ -221,8 +221,8 @@ section {
 
 .restaurant-bg {
   background-color: #F6F6F6;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .restaurants {
@@ -468,6 +468,8 @@ section {
   .fonctionnement {
     margin: 0;
     padding: 50px 0;
+    box-sizing: border-box;
+    padding-right: 5%;
   }
   .fonctionnement__title {
     font-family: Roboto;
@@ -478,7 +480,7 @@ section {
     gap: 32px;
   }
   .fonctionnement__step-card {
-    width: 30%;
+    width: 25.5%;
     height: 72px;
   }
   .fonctionnement__step-content {
@@ -493,7 +495,13 @@ section {
     font-family: Roboto;
   }
   .steps-container {
-    width: 90%;
+    width: 100%;
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+  .restaurant-bg {
+    padding-left: 10%;
+    padding-right: 10%;
   }
   .restaurants__cards {
     display: flex;
@@ -506,7 +514,7 @@ section {
     flex-grow: 1;
   }
   .restaurants__cards .card {
-    width: 80%;
+    width: 100%;
   }
   .restaurants__cards .card__content {
     margin: 16px 25px 16px 18px;
